# data-importer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SETUP.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: main.yml  tests.yml
data_importer/: __init__.py
data_importer/commands/: cron.py  drop_tables.py  helpers.py  rebuild.py  run.py  run_all.py  run_one.py  unwind.py
data_importer/lib/: ckan.py  column.py  dataset.py  field.py  filter.py  foreign_key.py  helpers.py  operators.py  parser.py  query.py  record.py  solr_index.py  stats.py
data_importer/migrations/: add-pending-column-to-emultimedia.sql  rename-exsiccata-vicecounty.sql
data_importer/tasks/: __init__.py  artefact.py  dataset.py  delete.py  gbif.py  indexlot.py  specimen.py
data_importer/tests/: README.md  __init__.py  test_delete.py  test_embargo.py  test_filters.py  test_import.py  test_task.py  test_unpublish.py
dataimporter/: config.py  dbs.py  importer.py  links.py  model.py  view.py
dataimporter/cli/: emu.py  ext.py  main.py  maintenance.py  portal.py  shell.py  utils.py  view.py
dataimporter/dbs/: converters.py  dbs.py
dataimporter/emu/: dumps.py
dataimporter/ext/: gbif.py
dataimporter/lib/: config.py  dbs.py  model.py  options.py  view.py
docker/: Dockerfile  config.yml  elasticsearch.yml  run-tests.sh
docs/: description.md  index.md  old_processes.md
docs/_scripts/: gen_api_pages.py
ke2psql/: __init__.py  config.cfg  config.cfg.example  run.py
ke2psql/handlers/: __init__.py
ke2psql/model/: __init__.py  keemu.py  log.py  meta.py
ke2psql/tasks/: __init__.py  catalogue.py  collection_events.py  delete.py  ke.py  multimedia.py  sites.py  stratigraphy.py  taxonomy.py
ke2sql/: __init__.py  cli.py  client.cfg.example  db.py  default.cfg.example  lib.py  log.py  models.py  run.py
ke2sql/commands/: __init__.py  cli.py  cron.py  drop.py  drop_tables.py  full-import.py  helpers.py  rebuild.py  (+5 more)
test/: base.py  catalogue.py  collectionevent.py  egg.py  gen.py  indexlot.py  log.py  main.py  mineralogy.py  multimedia.py  paleo.py  parasite_card.py  part.py  sites.py  specimen.py  stratigraphy.py  stub.py  taxonomy.py  test.py
test_legacy/: base.py  catalogue.py  collectionevent.py  egg.py  indexlot.py  multimedia.py  part.py  sites.py  specimen.py  stratigraphy.py  tests.py
tests/: conftest.py  test_config.py  test_dbs.py  test_importer.py  test_links.py  test_model.py  test_view.py
(+183 files in other folders)
