[project]
name = "data-importer"
version = "1.2.0"
description = "Pipeline for importing data from EMu into the NHM Data Portal"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Natural History Museum", email = "data@nhm.ac.uk" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "splitgill==3.1.0",
    "elasticsearch==8.10.1",
    "elasticsearch-dsl==8.9.0",
    "pymongo==4.6.0",
    "plyvel==1.5.0",
    "python-dateutil==2.8.2",
    "fastnumbers==5.0.1",
    "msgpack==1.0.7",
    "ciso8601==2.3.1",
    "requests==2.31.0",
    "click==8.1.7",
    "rich==13.6.0",
    "psycopg[binary]==3.1.18",
    "PyYAML==6.0.2",
    "filelock==3.16.1",
]
[project.optional-dependencies]
test = [
    "mock",
    "pytest",
    "pytest-cov",
    "coveralls",
    "freezegun",
    "responses",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-section-index",
    "mkdocs-include-markdown-plugin",
]

[project.urls]
repository = "https://github.com/NaturalHistoryMuseum/data-importer"
changelog = "https://github.com/NaturalHistoryMuseum/data-importer/blob/main/CHANGELOG.md"

[project.scripts]
dimp = "dataimporter.cli.main:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool]
[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["tests", "docs"]

[tool.commitizen]
name = "cz_nhm"
version = "1.2.0"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
version_files = [
    "pyproject.toml:version",
    "CITATION.cff:^version"
]

[tool.ruff]
target-version = "py38"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "D"
]
ignore = [
    "D100",
    "D104",
    "D200",
    "D202",
    "D203",
    "D205",
    "D206",
    "D212",
    "D300",
    "D401",
    "E111",
    "E114",
    "E117"
]

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88
pre-summary-newline = true
make-summary-multi-line = true
